--- a/source/stylesheets/form.css.scss
+++ b/source/stylesheets/form.css.scss
@@ -57,3 +57,9 @@ form {
     display: none;
   }
 }
+
+@media(max-width: 600px) {
+  form {
+    border: none;
+  }
+}
